# App-Generator

./: .gitignore  README.md  pyproject.toml
src/ai_android_app_generator/: __init__.py  agents.py  android_project.py  build_tools.py  cli.py  file_tools.py  graph.py  kotlin_templates.py  llm.py  mcp_filesystem.py  state.py
tests/: test_agents.py  test_build_tools.py  test_file_tools.py  test_graph.py  test_kotlin_templates.py  test_llm_tools.py  test_mcp_filesystem.py
